Minor fixes for JdbcTokenStore
* fix Indentation
* stream optimization